--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="hero">
     <header class="header">
       <a href="" class="logo">
-        <img src="./img/content/logos/logo-main.png" alt="lost shirt logo" class="logo__pic">
+        <img src="./img/content/logos/logo-main.png" alt="lost shirt logo" class="logo__pic--margin">
       </a>
       <a href="mailto: lostinspace@mail.ru" class="mail">
         <div class="mail__title">По всем вопросам пишите:</div>
