--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
       <!-- <div class="content"></div> -->
       <header class="header header--product">
         
-        <a href="" class="logo">
+        <a href="index.html" class="logo">
           <img src="./img/content/logos/logo-main.png" alt="lost shirt logo" class="logo__pic">
         </a>
         <div class="header__content">
