--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="container">
       <ul class="collections__list">
         <li class="collections__item collections__item--type-guys">
-          <a href="#" class="collections__link">
+          <a href="https://primula-mi.github.io/lost-shirt/product" class="collections__link">
             <h2 class="collections__title">Мужская коллекция</h2>
             <div class="collection__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
             <div class="btn">Посмотреть</div>
