--- a/product.html
+++ b/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -18,9 +18,7 @@
 <body>
   <div class="wrapper">
     <section class="head">
-      <!-- <div class="content"></div> -->
       <header class="header header--product">
-
         <a href="https://primula-mi.github.io/lost-shirt/" class="logo">
           <img src="./img/content/logos/logo-main.png" alt="lost shirt logo" class="logo__pic">
         </a>
@@ -38,10 +36,8 @@
           <div class="mail__title">По всем вопросам пишите:</div>
           <div class="mail__content">lostinspace@mail.ru</div>
         </a>
-
       </header>
-  </div>
-  </section>
+    </section>
 
   <section class="product">
     <div class="container">
@@ -83,24 +79,19 @@
             <div class="product__palette">
               <ul class="palette__list">
                 <li class="palette__item active-color" data-color="black">
-                  <div class="color__item color__item--black">
-                  </div>
+                  <div class="color__item color__item--black"></div>
                 </li>
                 <li class="palette__item" data-color="white">
-                  <div class="color__item color__item--white">
-                  </div>
+                  <div class="color__item color__item--white"></div>
                 </li>
                 <li class="palette__item" data-color="green">
-                  <div class="color__item color__item--green">
-                  </div>
+                  <div class="color__item color__item--green"></div>
                 </li>
                 <li class="palette__item" data-color="blue">
-                  <div class="color__item color__item--blue">
-                  </div>
+                  <div class="color__item color__item--blue"></div>
                 </li>
                 <li class="palette__item" data-color="red">
-                  <div class="color__item color__item--red">
-                  </div>
+                  <div class="color__item color__item--red"></div>
                 </li>
               </ul>
             </div>
